<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.BatterySettingActivity">
    <FrameLayout
        android:id="@+id/nav_battery_setting"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">
        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|start"
            android:layout_marginLeft="10dp"
            android:padding="10dp"
            android:src="@drawable/icon_back" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/text_battery_setting"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />
    </FrameLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nav_battery_setting"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">
            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_battery_protect"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:paddingVertical="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
            <LinearLayout
                android:id="@+id/linear_layout_protect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingVertical="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_percent_top"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <SeekBar
                    android:id="@+id/power_top"
                    android:min="0"
                    android:max="100"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"/>
                <TextView
                    android:id="@+id/seekbar_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_below="@id/power_top"
                    android:textColor="@color/black"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:text="0" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_percent_bottom"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <SeekBar
                    android:id="@+id/power_bottom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:min="0"
                    android:max="100"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical|end"/>
                <TextView
                    android:id="@+id/seekbar_value1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_below="@id/power_top"
                    android:textColor="@color/black"
                    android:layout_gravity="end"
                    android:layout_marginTop="16dp"
                    android:text="0" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>